ISSUE-51 Email for Import reporting (#165)
* Load logo from resources: Hard code the logos for now and inject them through guice
* Write Pug stuff in a reusable fashion
* Use the brand-new template engine for imports
* Injects for the template engine
* Copy templates into the app
* Adapt default configuration

---------

Co-authored-by: Benoit TELLIER <btellier@linagora.com>